--- a/main_system/templates/login/admin_login.html
+++ b/main_system/templates/login/admin_login.html
@@ -191,7 +191,7 @@
     <!-- 右侧：图片 -->
     <div class="right-panel">
       <!-- 你可以直接使用图片标签 -->
-      <img src="/static/image/liugou3.jpg" >
+      <img src="/media/login_image/admin_login.jpg" >
 {#  /media/login_image/admin_login.jpg      #}
 {#        /static/image/liugou2.jpg#}
     </div>
