--- a/main_system/templates/login/user_login.html
+++ b/main_system/templates/login/user_login.html
@@ -194,7 +194,7 @@
     <!-- 右侧：图片 -->
     <div class="right-panel">
       <!-- 你可以直接使用图片标签 -->
-      <img src="/static/image/liugou.jpg" >
+      <img src="/media/login_image/customer_login.jpg" >
 {#        /media/login_image/customer_login.jpg#}
     </div>
 
