--- a/main_system/templates/login/user_register.html
+++ b/main_system/templates/login/user_register.html
@@ -180,7 +180,7 @@
       <!-- 你可以直接使用图片标签 -->
 {#        /static/image/liugou.jpg#}
 {#        /media/login_image/customer_register.jpg#}
-      <img src="/static/image/liugou2.jpg">
+      <img src="/media/login_image/customer_register.jpg">
     </div>
 
   </div>
